# Wireframe-Engine

./: .build.cmake  .env.cmake  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  MG Engine.sln  README.md  editor.info  imgui.ini  setup.sh  template.build.cmake
MG Engine/: MG Engine.vcxproj  MG Engine.vcxproj.filters  cpp.hint
MG Engine/Assets/: Cube.mtl
MG Engine/lib/vulkan/: vulkan x86.lib
MG Engine/src/Assets/General/: Image.cpp  Image.h
MG Engine/src/Assets/Rendering/: Face.cpp  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Shader.cpp  Shader.h
MG Engine/src/Core/: ColorTypes.h  Defines.h
MG Engine/src/Debug/: Debugger.cpp  Debugger.h  DebuggerInternal.h
MG Engine/src/Game Loop/: GameLoopManager.cpp  GameLoopManager.h  GameLoopManagerInternal.h
MG Engine/src/Game Nodes/Lights/: DirectionalLight.h  PointLight.h
MG Engine/src/Game Nodes/Rendering/: Camera.cpp  Camera.h  MeshRenderer.cpp  MeshRenderer.h  ModelRenderer.cpp  ModelRenderer.h  RenderingManager.cpp  RenderingManager.h
MG Engine/src/Game Nodes/Testing/: CameraController.h
MG Engine/src/General/Game Loop/: GameLoopManager.cpp  GameLoopManager.h
MG Engine/src/General/Graphics Info/: GraphicsInfo.cpp  (+1 more)
MG Engine/src/Math/: Defines.h  EngineMath.cpp  EngineMath.h  Matrix4x4.cpp  Matrix4x4.h  Quaternion.cpp  Quaternion.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
MG Engine/src/OS/: OSManager.cpp  OSManager.h  OSManagerInternal.h
MG Engine/src/Rendering/: GlobalUbo.h  PushConstantData.h  RederingPipeline.cpp  RenderingPipeline.cpp  RenderingPipeline.h  RenderingPipelineInternal.h  ShaderData.h  TestFragment.frag  TestVertex.vert  VulkanModel.cpp  VulkanModel.h
MG Engine/src/Shaders/: FragShader.frag  VertShader.vert
MG Engine/src/Utility/: vector.h
MG Engine/src/Virtual/: Asset.cpp  Asset.h  GameNode.cpp  GameNode.h  GameObject.h  Node.cpp  Node.h  Object.cpp  Object.h
MG Engine/src/Vulkan/: Buffer.cpp  Buffer.h  DescriptorPool.cpp  DescriptorPool.h  Descriptors.cpp  Descriptors.h  SwapChain.cpp  SwapChain.h  SwapChainInternal.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInclude.h  VulkanManager.cpp  VulkanManager.h  VulkanManagerInternal.h
assets/: MainPipeline.pipeline  Scene.gameobj  Scene.node
assets/materials/: Default.mat  DefaultMaterial.mtl
assets/models/: Cone.model  Cube.model  Plane.model  Torus.model
assets/pipelines/: MainPipeline.pipeline
assets/shaders/: FragShader.frag.spv  FragShader.shader  VertShader.shader  VertShader.vert.spv
engine/: WireframeEngine.hpp
engine/Assets/General/: Image.cpp  Image.hpp  Model.cpp  Model.hpp
engine/Assets/Rendering/: Material.cpp  Material.hpp  Pipeline.cpp  Pipeline.hpp  Shader.cpp  Shader.hpp
engine/Base/: Asset.cpp  Asset.hpp  Node.cpp  Node.hpp
engine/Components/Lighting/: Light.cpp  Light.hpp  LightTypes.cpp  LightTypes.hpp  LightingSystem.cpp  LightingSystem.hpp  LightingUbo.hpp
engine/Components/Renderers/: ModelRenderer.cpp  ModelRenderer.hpp
engine/Components/Rendering/: Camera.cpp  Camera.hpp  Renderer.cpp  Renderer.hpp  RenderingSystem.cpp  RenderingSystem.hpp
engine/ECS/: Component.cpp  Component.hpp  EngineECS.hpp  GameObject.cpp  GameObject.hpp  System.cpp  System.hpp
engine/Editor/: Callbacks.cpp  Editor.hpp  FileBrowserWindow.cpp  HierarchyWindow.cpp  LoadSaveCallbacks.cpp  PropertiesWindow.cpp  TestWindow.cpp
engine/General/: Application.cpp  Application.hpp  Engine.cpp  Engine.hpp  EngineGeneral.hpp  GameLoop.cpp  GameLoop.hpp  Input.cpp  Input.hpp  KeyCode.hpp  Program.cpp  Program.hpp  Time.cpp  Time.hpp
engine/Math/: Colors.hpp  EngineMath.hpp  MathHashes.cpp  Matrix4x4.hpp  Quaternion.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
engine/Nodes/Controllers/: CameraController.cpp  CameraController.hpp
engine/Nodes/General/: Body.cpp  Body.hpp
engine/Nodes/Lighting/: Light.cpp  Light.hpp  LightingUbo.hpp
engine/Nodes/Renderers/: ModelRenderer.cpp  ModelRenderer.hpp
engine/Nodes/Rendering/: Camera.cpp  Camera.hpp  Renderer.cpp  Renderer.hpp
engine/Platform/: Input.hpp  KeyCode.hpp  Platform.hpp  PlatformLinux.cpp  Window.hpp
engine/Platform/Linux/: Window.cpp
engine/Platform/Windows/: Input.cpp  Internal.hpp  KeyCode.cpp  Window.cpp
engine/Renderer/: Renderer.cpp  Renderer.hpp
engine/Renderer/Vulkan/: Allocator.cpp  Allocator.hpp  CommandPool.cpp  CommandPool.hpp  Device.cpp  Device.hpp  Instance.cpp  Instance.hpp  Renderer.cpp  Renderer.hpp  SwapChain.cpp  SwapChain.hpp  VulkanRenderer.cpp  VulkanRenderer.hpp
engine/Vulkan/: Buffer.cpp  Buffer.hpp  DescriptorPool.cpp  DescriptorPool.hpp  Device.cpp  Device.hpp  EngineVulkan.hpp  Sampler.cpp  Sampler.hpp  SwapChain.cpp  SwapChain.hpp  VulkanInclude.hpp  VulkanUtils.cpp  VulkanUtils.hpp
engine/Window/: MainWindow.hpp
engine/Window/Linux/: MainWindow.cpp  MainWindow.hpp
engine/Window/Windows/: MainWindow.cpp  MainWindow.hpp
info/: ProjectInfo.hpp  ProjectInfo.hpp.in
src/: Main.cpp  TestNode.cpp  TestNode.hpp
src/Assets/General/: Image.cpp  Image.hpp  Model.cpp  Model.hpp
src/Assets/Rendering/: Material.cpp  Material.hpp  Pipeline.cpp  Pipeline.hpp  Shader.cpp  Shader.hpp
src/Base/: Asset.cpp  Asset.hpp  Node.cpp  Node.hpp
src/Math/: Colors.hpp  EngineMath.hpp  MathHashes.cpp  Matrix4x4.hpp  Quaternion.hpp  Vector2.hpp  Vector3.hpp  Vector4.hpp
src/Nodes/Controllers/: CameraController.cpp  CameraController.hpp
src/Nodes/General/: Body.cpp  Body.hpp
src/Nodes/Lighting/: Light.cpp  Light.hpp  LightingUbo.hpp
src/Nodes/Renderers/: ModelRenderer.cpp  ModelRenderer.hpp
src/Nodes/Rendering/: Camera.cpp  Camera.hpp  Renderer.cpp  Renderer.hpp
src/Shaders/: FragShader.frag  VertShader.vert
src/Systems/: GameLoop.cpp  GameLoop.hpp  Input.cpp  Input.hpp  KeyCode.hpp  TIme.hpp  Time.cpp
src/Vulkan/: Buffer.cpp  Buffer.hpp  DescriptorPool.cpp  DescriptorPool.hpp  Device.cpp  Device.hpp  Sampler.cpp  Sampler.hpp  SwapChain.cpp  SwapChain.hpp  VulkanInclude.hpp  VulkanUtils.cpp  VulkanUtils.hpp
src/Window/Windows/: MainWindow.cpp  MainWindow.hpp
(+46 files in other folders)
